--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.2'
     compile 'org.apache.commons:commons-lang3:3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
